--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@vuepress/client": "2.0.0-beta.63",
-    "@vuepress/theme-default": "2.0.0-beta.63",
     "@vuepress/cli": "2.0.0-beta.63",
-    "@vuepress/utils": "2.0.0-beta.63",
-    "@vuepress/plugin-docsearch": "2.0.0-beta.63",
+    "@vuepress/client": "2.0.0-beta.63",
     "@vuepress/core": "2.0.0-beta.63",
+    "@vuepress/plugin-docsearch": "2.0.0-beta.63",
+    "@vuepress/plugin-google-analytics": "^2.0.0-beta.63",
+    "@vuepress/theme-default": "2.0.0-beta.63",
+    "@vuepress/utils": "2.0.0-beta.63",
     "vue": "^3.3.4",
     "vuepress": "2.0.0-beta.63"
   }
