--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vuepress/cli": "2.0.0-beta.63",
     "@vuepress/client": "2.0.0-beta.63",
     "@vuepress/core": "2.0.0-beta.63",
+    "@vuepress/plugin-container": "^2.0.0-beta.63",
     "@vuepress/plugin-docsearch": "2.0.0-beta.63",
     "@vuepress/plugin-google-analytics": "^2.0.0-beta.63",
     "@vuepress/theme-default": "2.0.0-beta.63",
